Add Celsius alongside Fahrenheit, round most values, fix weather forecast precipitation chance, and localize the date/time