@@ -6,6 +6,7 @@ import io.banditoz.mchelper.http.DarkSkyClient;
 import io.banditoz.mchelper.stats.Status;
 import io.banditoz.mchelper.utils.DateUtils;
 import io.banditoz.mchelper.utils.Help;
+import io.banditoz.mchelper.weather.darksky.Currently;
 import io.banditoz.mchelper.weather.darksky.DSWeather;
 import io.banditoz.mchelper.weather.darksky.DataItem;
 import io.banditoz.mchelper.weather.geocoder.Location;
@@ -15,6 +16,9 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.DoubleSummaryStatistics;
 import java.util.List;
+
+import static io.banditoz.mchelper.weather.TemperatureConverter.fToCHU;
+import static java.lang.Math.round;
 
 public class WeatherCommand extends Command {
     @Override
@@ -46,19 +50,22 @@ public class WeatherCommand extends Command {
                 .filter(di -> !di.time().isAfter(morning) || di.time().isAfter(nextMidnight))
                 .mapToDouble(DataItem::temperature)
                 .summaryStatistics();
-
+        
+        Currently c = response.currently();
+        
         ce.sendEmbedReply(new EmbedBuilder()
-                .setTitle("Current Weather • " + response.currently().summary() + " • " + response.currently().temperature() + "°F",
-                        "https://merrysky.net/forecast/" + response.latitude() + "," + response.longitude())
+                .setTitle("Current Weather • %s • %d°F / %s°C".formatted(c.summary(), round(c.temperature()), fToCHU(c.temperature())),
+                        "https://merrysky.net/forecast/%s,%s".formatted(response.latitude(), response.longitude()))
 //                .setDescription(response.daily().summary())
-                .addField("Temperature", response.currently().temperature() +
-                        "°F (feels like " + response.currently().apparentTemperature() + "°F)", true)
-                .addField("Low/High", stats.getMin() + "°F/" + stats.getMax() + "°F", true)
-                .addField("Humidity", String.format("%.1f%%", response.currently().humidity() * 100), true)
-                .addField("Wind", response.currently().windSpeed() + " mph", true)
-                .addField("Precipitation", String.format("%.1f%%", response.currently().precipProbability() * 100), true)
-                .addField("Pressure", String.format("%.1f mb\n%.3f atm", response.currently().pressure(), response.currently().pressure() / 1013.0), true)
-                .setFooter(String.format("%s\n(%.5f,%.5f)", location.displayName(), response.latitude(), response.longitude()))
+                .addField("Temperature", "%s°F/%s°C\n(feels like %s°F/%s°C)"
+                        .formatted(round(c.temperature()), fToCHU(c.temperature()), round(c.apparentTemperature()), fToCHU(c.apparentTemperature())), true)
+                .addField("Low/High", "%s°F/%s°F\n%s°C/%s°C"
+                        .formatted(round(stats.getMin()), round(stats.getMax()), fToCHU(stats.getMin()), fToCHU(stats.getMax())), true)
+                .addField("Humidity", "%s%%".formatted(round(c.humidity() * 100D)), true)
+                .addField("Wind", "%s mph".formatted(round(c.windSpeed())), true)
+                .addField("Precipitation", "%s%%".formatted(round(c.precipProbability() * 100D)), true)
+                .addField("Pressure", "%s mb\n%.3f atm".formatted(round(c.pressure()), c.pressure() / 1013.0), true)
+                .setFooter("%s\n(%.4f,%.4f)".formatted(location.displayName(), response.latitude(), response.longitude()))
                 .build());
         return Status.SUCCESS;
     }
